[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Highscore/PostGameHighscore.gd" type="Script" id=1]
[ext_resource path="res://addons/gamejolt_api_v2/main.gd" type="Script" id=2]
[ext_resource path="res://addons/gamejolt_api_v2/gj_icon.png" type="Texture" id=3]
[ext_resource path="res://Scenes/AddNewHighscoreUI.gd" type="Script" id=4]
[ext_resource path="res://Fonts/code_bold_big.tres" type="DynamicFont" id=5]
[ext_resource path="res://Fonts/code_bold_small.tres" type="DynamicFont" id=6]
[ext_resource path="res://Fonts/code_bold.tres" type="DynamicFont" id=7]

[node name="PostGameHighscore" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.0313726, 0.905882, 0.972549, 0.180392 )

[node name="GameJoltAPI" type="HTTPRequest" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
private_key = "867141e4f6d7c303193c9be0d19e5523"
game_id = "403339"

[node name="NewHighscoreUI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="Label" type="Label" parent="NewHighscoreUI"]
anchor_right = 1.0
margin_right = 1880.0
margin_bottom = 226.0
rect_pivot_offset = Vector2( 960, 113 )
custom_fonts/font = ExtResource( 5 )
text = "New Highscore"
align = 1
valign = 1

[node name="SizeTween" type="Tween" parent="NewHighscoreUI/Label"]

[node name="ColorTween" type="Tween" parent="NewHighscoreUI/Label"]

[node name="NewScoreInfo" type="Label" parent="NewHighscoreUI"]
margin_left = 2.0
margin_top = 365.0
margin_right = 1922.0
margin_bottom = 507.0
custom_fonts/font = ExtResource( 6 )
text = "Score: 13340
Place: 4th"
align = 1

[node name="InsertNicknameLabel" type="Label" parent="NewHighscoreUI"]
margin_left = 248.324
margin_top = 634.324
margin_right = 695.324
margin_bottom = 693.324
custom_fonts/font = ExtResource( 6 )
text = "Insert Nickname:"
align = 1

[node name="LoadingLabel" type="Label" parent="NewHighscoreUI"]
visible = false
margin_left = 735.0
margin_top = 925.0
margin_right = 1185.0
margin_bottom = 985.0
custom_fonts/font = ExtResource( 6 )
text = "SUBMITTING..."
align = 1

[node name="LineEdit" type="LineEdit" parent="NewHighscoreUI"]
margin_left = 690.0
margin_top = 618.0
margin_right = 1290.0
margin_bottom = 708.0
custom_fonts/font = ExtResource( 7 )

[node name="AddHighscoreButton" type="Button" parent="NewHighscoreUI"]
anchor_right = 1.0
margin_left = 780.0
margin_top = 925.0
margin_right = 1100.0
margin_bottom = 1008.0
rect_pivot_offset = Vector2( -1290, -630 )
custom_fonts/font = ExtResource( 6 )
toggle_mode = true
text = "Submit Score"

[node name="MainMenuButton" type="Button" parent="NewHighscoreUI"]
visible = false
anchor_right = 1.0
margin_left = 785.0
margin_top = 992.376
margin_right = 1095.0
margin_bottom = 1072.38
custom_fonts/font = ExtResource( 7 )
toggle_mode = true
text = "Main Menu"

[node name="RegularScoreUI" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="HighscoresButton" type="Button" parent="RegularScoreUI"]
anchor_right = 1.0
margin_left = 150.0
margin_top = 950.0
margin_right = 528.0
margin_bottom = 1050.0
rect_pivot_offset = Vector2( -1290, -630 )
custom_fonts/font = ExtResource( 7 )
toggle_mode = true
text = "Highscores"

[node name="NewGameButton" type="Button" parent="RegularScoreUI"]
anchor_right = 1.0
margin_left = 787.0
margin_top = 950.0
margin_right = 1092.0
margin_bottom = 1050.0
rect_pivot_offset = Vector2( -1290, -630 )
custom_fonts/font = ExtResource( 7 )
toggle_mode = true
text = "New game"

[node name="MainMenuButton" type="Button" parent="RegularScoreUI"]
anchor_right = 1.0
margin_left = 1400.0
margin_top = 950.0
margin_right = 1718.0
margin_bottom = 1050.0
rect_pivot_offset = Vector2( -1290, -630 )
custom_fonts/font = ExtResource( 7 )
toggle_mode = true
text = "Main Menu"

[connection signal="api_scores_added" from="GameJoltAPI" to="NewHighscoreUI" method="_on_GameJoltAPI_api_scores_added"]
[connection signal="api_scores_fetched" from="GameJoltAPI" to="." method="_on_GameJoltAPI_api_scores_fetched"]
[connection signal="tween_completed" from="NewHighscoreUI/Label/SizeTween" to="NewHighscoreUI" method="_on_SizeTween_tween_completed"]
[connection signal="tween_completed" from="NewHighscoreUI/Label/ColorTween" to="NewHighscoreUI" method="_on_ColorTween_tween_completed"]
[connection signal="pressed" from="NewHighscoreUI/AddHighscoreButton" to="NewHighscoreUI" method="_on_AddHighscoreButton_pressed"]
[connection signal="pressed" from="NewHighscoreUI/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="RegularScoreUI/HighscoresButton" to="." method="_on_HighscoresButton_pressed"]
[connection signal="pressed" from="RegularScoreUI/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="RegularScoreUI/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
